--- a/study/templates/study/base_admin.html
+++ b/study/templates/study/base_admin.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <a class="navbar-brand" href="{% url 'study:index' %}">首页</a>
+    <a class="navbar-brand active" href="{% url 'study:index' %}">首页</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,28 +23,44 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'study:system_view' %}">浏览</a>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'study:system_view' %}">浏览<span class="sr-only">(current)</span></a>
             </li>
 
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'study:system_admin' %}">管理</a>
             </li>
+            {% comment %}                        <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Other
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">One</a>
+                    <a class="dropdown-item" href="#">Two</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Three</a>
+                </div>
+            </li>{% endcomment %}
         </ul>
 
-        <div>
+        <div class="mx-5">
             <form class="form-inline mr-auto" action="{% url 'study:pdf_file_search' %}" method="post">
                 {% csrf_token %}
-                <input class="form-control mr-sm-2" type="text" name="file_name" placeholder="Search">
+                <input class="form-control mr-sm-2" type="search" name="file_name" placeholder="Search"
+                       aria-label="Search">
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">查找</button>
             </form>
         </div>
-
         <ul class="nav navbar-nav navbar-right">
             {% if request.session.is_login %}
-                <li class="nav-item"><a class="nav-link" href="#" style="color: #FFFFFF">退出</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #FFFFFF">退出</a>
+                </li>
             {% else %}
-                <li class="nav-item"><a class="nav-link" href="#" style="color: #FFFFFF">登录</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'study:to_login' %}" style="color: #FFFFFF">登录</a>
+                </li>
             {% endif %}
         </ul>
     </div>
