--- a/study/templates/study/login.html
+++ b/study/templates/study/login.html
@@ -12,9 +12,9 @@
     <div class="container-fluid mx-lg-5 my-lg-5">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <form action="#" method="post">
+                <form action="{% url 'study:user_login' %}" method="post">
                     {% if message %}
-                        <div class="alert alert-warning"></div>
+                        <div class="alert alert-warning">{{ message }}</div>
                     {% endif %}
                     {% csrf_token %}
                     <div class="form-group">
@@ -30,7 +30,9 @@
                                placeholder="password" required>
                     </div>
 
-                    <button type="submit" class="btn btn-primary" name="login" value="登 录" href="#">登录</button>
+                    <div class="text-left">
+                        <button type="submit" class="btn btn-primary" name="login" value="登 录">登录</button>
+                    </div>
                 </form>
             </div>
         </div>
