--- a/study/templates/study/base_admin.html
+++ b/study/templates/study/base_admin.html
@@ -15,7 +15,7 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <a class="navbar-brand active" href="{% url 'study:index' %}">首页</a>
+    <a class="navbar-brand active" href="{% url 'study:admin_index' %}">首页</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
