--- a/study/templates/study/system_admin_new.html
+++ b/study/templates/study/system_admin_new.html
@@ -11,8 +11,9 @@
     <ol class="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a class="btn btn-primary" href="{% url 'study:to_operation' 'system' 'add' %}"
-                   data-toggle="modal" data-target="#systemAdd">系统添加</a>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#systemAdd">
+                    系统添加
+                </button>
             </li>
         </ol>
     </ol>
