--- a/study/templates/study/system_pdf_admin_new.html
+++ b/study/templates/study/system_pdf_admin_new.html
@@ -11,8 +11,9 @@
     <ol class="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a class="btn btn-primary" href="{% url 'study:to_operation' 'pdf_file' 'upload' %}"
-                   data-toggle="modal" data-target="#pdfFileAdd">文档添加</a>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#pdfFileAdd">
+                    文档添加
+                </button>
             </li>
         </ol>
     </ol>
@@ -22,7 +23,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="pdfFileAddLabel">PDF文档添加</h5>
+                    <h5 class="modal-title" id="pdfFileAddLabel">文档添加</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -57,6 +58,7 @@
                         <a href={{ system_pdf.file_url }} target="_blank">
                             <span class="glyphicon glyphicon-folder-open"> {{ system_pdf.file_name }}</span>
                         </a>
+                        <span class="glyphicon glyphicon-folder-open mx-5 mr-auto">{{ system_pdf.file_datetime }}</span>
                         <button type="button" class="btn btn-danger float-right" data-toggle="modal"
                                 data-target="#pdfFileDelete" data-whatever={{ system_pdf.file_name }}>
                             删除
@@ -80,19 +82,19 @@
                 <div class="modal-body">
                     <form action="{% url 'study:pdf_file_delete' %}" method="post">
                         {% csrf_token %}
-                        {#                        <div class="form-group">#}
-                        {#                            <label for="system_name">所属系统：</label>#}
-                        {#                            <input type="text" class="form-control" id="system_name" readonly="readonly"#}
-                        {#                                   name="system_name" value={{ system_name }}>{{ system_name }}#}
-                        {#                        </div>#}
+                        <div class="form-group">
+                            <label for="system_name">所属系统：</label>
+                            <input type="text" class="form-control" id="system_name" readonly="readonly"
+                                   name="system_name" value={{ system_name }}>
+                        </div>
 
                         <div class="form-group">
-                            <input type="text" class="form-control" readonly="readonly" name="file_name">
+                            <label for="file_name">文档名称：</label>
+                            <input type="text" class="form-control" id="file_name" readonly="readonly" name="file_name">
                         </div>
 
                         <div class="form-group text-right">
-                            <button type="submit" class="btn btn-primary" name="file_delete"
-                                    value="确定">
+                            <button type="submit" class="btn btn-primary" name="file_delete" value="确定">
                                 确定
                             </button>
                         </div>
@@ -107,7 +109,7 @@
             var button = $(event.relatedTarget) // 触发事件的按钮
             var recipient = button.data('whatever') // 解析出data-whatever内容
             var modal = $(this)
-            modal.find('.modal-body input').val(recipient)
+            modal.find('.modal-body input[name=file_name]').val(recipient)
         })
     </script>
 
